--- a/public/wp-content/themes/skt-charity-child/style.css
+++ b/public/wp-content/themes/skt-charity-child/style.css
@@ -10,49 +10,128 @@
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         one-column,two-columns,right-sidebar,responsive-layout,custom-background,custom-header,custom-menu,featured-images,sticky-post,threaded-comments
 */
-
 .heart {
-    border-right: none;
-}
+  border-right: none; }
 
 .toggle a {
-    background-color: #6e648c;
-}
-
-.bol-header {
-    background-color: 'red';
-    font-size: 30px;
-}
+  background-color: #6E638D; }
 
 #pagearea {
-    background: url(images/child-817368.png) no-repeat center top;
-    background-size: 100%;
-}
+  background: url(images/child-817368.png) no-repeat center top;
+  background-size: cover; }
+  @media (max-width: 767px) {
+    #pagearea {
+      background-image: url(images/child-vertical.png); } }
 
 .slide_info a.ReadMore:hover {
-    background-color: #3B3159;
-}
-
-.sitenav ul li ul li {
-    border-bottom-color: #6e648c;
-}
+  background-color: #574e6f; }
 
 div.slider-wrapper .nivo-controlNav a {
-    background-color: gray;
-}
+  background-color: #696A6A; }
 
 div.slider-wrapper .nivo-controlNav a.active {
-    background-color: #6e648c;
-}
+  background-color: #6E638D; }
 
 h1 {
-    color: #1fb7c8;
-}
+  color: #64BCC6; }
 
 div.copyright-wrapper .design-by {
-    display: none;
-}
+  display: none; }
 
 form.search-form {
-    margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
+
+aside.widget {
+  padding-top: 10px;
+  background-color: #EFEFEF; }
+
+div.recent-post img {
+  border: #696A6A solid 2px; }
+
+.cols-3 {
+  border-right: 1px solid #6E638D; }
+
+.social-icons a {
+  background-color: #696A6A; }
+  .social-icons a:hover {
+    background-color: #64BCC6 !important; }
+
+#footer-wrapper {
+  color: black;
+  background-color: #EFEFEF; }
+
+.phone-no a {
+  color: #64BCC6; }
+
+.cols-3 h5 {
+  color: #6E638D; }
+
+.copyright-wrapper {
+  color: #fff; }
+
+/************ home navbar styles **************/
+body.blog .sitenav ul li:hover > ul {
+  background-color: #6E638D; }
+
+.sitenav ul li ul li {
+  border-bottom-color: #EFEFEF;
+  border-bottom-width: 1px;
+  top: 0; }
+
+.sitenav ul li a:hover {
+  color: #6E638D; }
+
+.sitenav ul.sub-menu li:hover {
+  background-color: #574e6f;
+  -webkit-transition: background 0.4s linear;
+  -moz-transition: background 0.4s linear;
+  -ms-transition: background 0.4s linear;
+  -o-transition: background 0.4s linear;
+  transition: background 0.4s linear; }
+.sitenav ul.sub-menu li a:hover {
+  color: #fff; }
+
+/************ inner navbar styles **************/
+.innerheader {
+  background-color: #EFEFEF; }
+  .innerheader .logo a, .innerheader .logo p {
+    color: #6E638D; }
+
+.innerheader div.menu-main-menu-container ul li a {
+  color: #6E638D; }
+
+.innerheader .sitenav ul li.current_page_item a {
+  color: #64BCC6; }
+  .innerheader .sitenav ul li.current_page_item a:hover {
+    color: white; }
+
+.innerheader .sitenav ul li:hover > ul {
+  background-color: #EFEFEF; }
+
+.innerheader .sitenav ul li ul li {
+  border-bottom-color: none; }
+
+.innerheader .sitenav ul.sub-menu li:hover {
+  background-color: #696A6A;
+  -webkit-transition: background 0.4s linear;
+  -moz-transition: background 0.4s linear;
+  -ms-transition: background 0.4s linear;
+  -o-transition: background 0.4s linear;
+  transition: background 0.4s linear; }
+
+.donatebtn {
+  background-color: #696A6A; }
+
+.widget-column-3 {
+  border-right: none; }
+
+@media screen and (max-width: 767px) {
+  .toggle a {
+    color: #e5e5e5; }
+
+  .home .header, .page .header {
+    background-color: #EFEFEF !important; }
+    .home .header .logo a, .home .header .logo p, .page .header .logo a, .page .header .logo p {
+      color: #64BCC6; } }
+
+/*# sourceMappingURL=style.css.map */
