--- a/public/wp-content/themes/skt-charity-child/style.css
+++ b/public/wp-content/themes/skt-charity-child/style.css
@@ -129,9 +129,9 @@ body.blog .sitenav ul li:hover > ul {
   .toggle a {
     color: #e5e5e5; }
 
-  .home .header, .page .header {
+  body .header, body .header {
     background-color: #EFEFEF !important; }
-    .home .header .logo a, .home .header .logo p, .page .header .logo a, .page .header .logo p {
+    body .header .logo a, body .header .logo p, body .header .logo a, body .header .logo p {
       color: #64BCC6; } }
 
 /*# sourceMappingURL=style.css.map */
