--- a/style.scss
+++ b/style.scss
@@ -191,3 +191,29 @@ body.blog .sitenav ul li:hover > ul {
         }
     }
 }
+
+
+/************ static page **************/
+.page_content .header-image {
+    margin-bottom: 20px;
+}
+
+.adoption-slider-image {
+    width: 30%;
+    margin: 4px;
+    border: solid 4px $main;
+    display: inline-block;
+
+    &:nth-child(even) {
+        border-color: $accent1;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .adoption-slider-image {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+}
