--- a/public/wp-content/themes/skt-charity-child/style.css
+++ b/public/wp-content/themes/skt-charity-child/style.css
@@ -154,5 +154,8 @@ body.blog .sitenav ul li:hover > ul {
     margin-left: auto;
     margin-right: auto;
     display: block; } }
+/************ footer **************/
+.recent-post img {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
