--- a/style.scss
+++ b/style.scss
@@ -221,3 +221,8 @@ body.blog .sitenav ul li:hover > ul {
         display: block;
     }
 }
+
+/************ footer **************/
+.recent-post img {
+    display: none;
+}
