--- a/style.scss
+++ b/style.scss
@@ -104,6 +104,10 @@ div.recent-post img {
     color: $white;
 }
 
+ul {
+    margin-left: 35px;
+}
+
 /************ home navbar styles **************/
 body.blog .sitenav ul li:hover > ul {
     background-color: $main;
